--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "clean": "rmdir /s /q .next"
   },
   "dependencies": {
+    "@ai-sdk/replicate": "^1.0.1",
+    "@fal-ai/client": "^1.6.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "ai": "^5.0.5",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
